# group_915_exam

./: CMakeLists.txt  main.cpp
src/Controller/: Controller.cpp  Controller.h
src/Domain/: Observer.h  Student.cpp  Student.h  Subject.cpp  Subject.h  Teacher.cpp  Teacher.h
src/Repository/: StudentRepo.cpp  StudentRepo.h  TeacherRepo.cpp  TeacherRepo.h
src/Ui/: GUIManager.cpp  GUIManager.h  editwindow.cpp  editwindow.h  editwindow.ui  teacherwindow.cpp  teacherwindow.h  teacherwindow.ui  visualtime.cpp  visualtime.h  visualtime.ui
